[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/interactables/brazier/brazier.gd" type="Script" id=1]
[ext_resource path="res://scenes/interactables/brazier/brazier_sprite.png" type="Texture" id=2]
[ext_resource path="res://scenes/interactables/brazier/brazier_flame_particlesmaterial.tres" type="Material" id=3]
[ext_resource path="res://scenes/interactables/brazier/brazier_sparks_particlesmaterial.tres" type="Material" id=4]
[ext_resource path="res://scenes/interactables/brazier/audio/relit.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/interactables/brazier/audio/put_out.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 10.8411

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.8948, 8.76092 )

[node name="Brazier" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="FlameParticles" type="Particles2D" parent="."]
position = Vector2( 0, -12 )
z_index = 100
amount = 75
lifetime = 0.5
process_material = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="SparkParticles" type="Particles2D" parent="."]
position = Vector2( 0, -12 )
z_index = 100
emitting = false
amount = 40
lifetime = 0.2
one_shot = true
explosiveness = 0.8
process_material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AreaDetection" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HitBox" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -6.9 )
shape = SubResource( 2 )

[node name="FlameResetTimer" type="Timer" parent="."]
one_shot = true

[node name="RelitAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
attenuation = 0.2

[node name="PutOutAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
attenuation = 0.2
[connection signal="body_entered" from="." to="." method="_on_Brazier_body_entered"]
[connection signal="timeout" from="FlameResetTimer" to="." method="_on_FlameResetTimer_timeout"]
